Simplification et nettoyage